Fix the user service to only allow system roles to find users and perform user actions. Comment out the migrate job so we can wait until the resume site is up with that url.